cluster/apps/keycloak/keycloak/networkpolicies/envoy-gateway-egress-keycloak.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-egress-keycloak
  namespace: network
spec:
  description: Allow all gateway egress traffic to keycloak
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/component: proxy
      app.kubernetes.io/managed-by: envoy-gateway
      gateway.envoyproxy.io/owning-gateway-namespace: network
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: keycloak
            app.kubernetes.io/component: keycloak
            "k8s:io.kubernetes.pod.namespace": keycloak
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
