cluster/apps/keycloak/keycloak/networkpolicies/keycloak.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: keycloak
  namespace: keycloak
spec:
  endpointSelector:
    matchLabels:
      app: keycloak
      component: keycloak
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: ingress-nginx
            "k8s:io.kubernetes.pod.namespace": ingress-nginx
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: oauth2-proxy
            app.kubernetes.io/component: authentication-proxy
            app.kubernetes.io/instance: oauth2-proxy
            "k8s:io.kubernetes.pod.namespace": oauth2-proxy
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: keycloak-psql
            cnpg.io/podRole: instance
            "k8s:io.kubernetes.pod.namespace": keycloak
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
        - ports:
            - port: "8000" # /healthz endpoint
              protocol: TCP
    - toFQDNs:
        - matchName: ${SMTP_DOMAIN}
      toPorts:
        - ports:
            - port: "587"
              protocol: TCP
